Avoid text block in local placeholder SVG